# fer

./: .gitignore  Cargo.toml  PERFORMANCE_VS_LEGACY.md  README.md  README_CEO.md  build_ios.sh  description.txt  fergeminichat.md  stress_test.py
benches/: engine_performance.rs
skill/skill-litho/: configuration.md  examples.md  integration.md  troubleshooting.md
skill/skill-litho/scripts/: ci-setup.sh  quick-start.sh
src/: lib.rs
telco-web-dashboard/: index.html  main.js
