[package]
name = "telco_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
uniffi = { version = "0.28.0", features = ["cli"] }
thiserror = "2.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
libc = "0.2"
regex = "1.10"
secrecy = { version = "0.8", features = ["serde"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }

[[bench]]
name = "engine_performance"
harness = false
